# TransitOps-Odoo-Hackathon-2026

./: .gitignore  README.md  docker-compose.yml
backend/: .env  .env.example  Dockerfile  alembic.ini  gunicorn.config.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: f9f7f888d43b_initial_auth_migration.py
backend/app/: main.py  models.py
backend/app/auth/: main.py  models.py  schemas.py
backend/app/auth/core/: Hashing.py  config.py  dependencies.py  email_sender.py  email_templates.py  jwt_handler.py  logging_config.py  rate_limiter.py  redis_client.py  validators.py
backend/app/auth/database/: db.py
backend/app/auth/repository/: email_verification.py  password_reset.py  token.py  user.py
backend/app/auth/routers/: auth.py
backend/app/core/: config.py  dependencies.py  email_sender.py  error_handlers.py  jwt_handler.py  redis_client.py  request_id_middleware.py  security_headers.py
backend/app/database/: __init__.py  base.py
backend/app/driver/: models.py
backend/app/models/: __init__.py  audit.py  driver.py  email_verification.py  expense.py  fuel.py  main.py  maintenance.py  notification.py  password_reset.py  role.py  token.py  trip.py  user.py  vehicle.py
backend/app/vehicle/: models.py
