[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transitops-backend"
version = "0.1.0"
description = "FastAPI backend for TransitOps Odoo Hackathon 2026"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "sqlalchemy==2.0.23",
    "fastapi>=0.115.0",
    "pydantic>=2.9.0",
    "uvicorn>=0.30.0",
    "pydantic-core>=2.23.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings==2.1.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.1.1",
    "python-jose[cryptography]==3.3.0",
    "redis==5.0.1",
    "alembic==1.13.0",
    "email-validator==2.1.0",
    "aiosmtplib==3.0.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "python-json-logger==2.0.7",
]

[tool.uvicorn]
host = "0.0.0.0"
port = 8080
reload = true

[tool.alembic]
script_location = "alembic"